feature(ui): add latest ui

--- a/src/main/resources/static/table/i18n/i18n.properties
+++ b/src/main/resources/static/table/i18n/i18n.properties
@@ -1,11 +1,14 @@
 Title=Table
+Start=Start
 Players=Players
 Name=Name
 Cash=Cash
 Bets=Bets
 Bet=Bet
+Pot=Pot
 CommunityCards=Community Cards
 PlayerCards=Your Cards
+Winner=Winner
 Suit=Suit
 Kind=Kind
 Raise=Raise
@@ -13,4 +16,3 @@ Amount=Amount
 Check=Check
 Call=Call
 Fold=Fold
-Pot=Pot
